# Volera_Backend

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  _celery.py  config.py  convert_to_pdf.py  docker-compose.yml  dua_qunoot.md  graph.py  installer.py  main.py  new_task.md  output.txt  product_cache.db  product_page.html  pyproject.toml  qdrant_config.yaml  r.json  redis.conf  requirements.txt  run_price_tracking.py  scrape_test.py  sessions.db  shop.json  task.md  test.py  zeromq.py
_websockets/: __init__.py  connection_manager.py  endpoints.py  message_handler.py  route.py  schema.py  services.py
agents/: __init__.py  comparison.py  config.py  followup_agent.py  human.py  insights.py  memory.py  memory_agent.py  meta.py  planner.py  planner_agent.py  policy.py  reviewer.py  search.py  search_tool.py  state.py  web_search.py  writer.py
agents/comparison/: insights.py  planner.py
agents/comparison/prompts/: planner_prompt.py
agents/copilot/: graph.py  meta_agent.py  planner.py
agents/copilot.py/: meta_agent.py  state.py
agents/insights/: followup_agent.py  graph.py  human_node.py  schema.py  web_query_agent.py  writer_agent.py
agents/insights/prompts/: followup.py  summary_prompt.py  web_retriever.py  writer_prompt.py
agents/legacy/: base.py  llm.py
agents/prompts/: followup.py
agents/reviews/: reviewer.py
agents/search/: comparison.py  filter.py  product.py  prompts.py  replier.py
agents/tools/: general.py  google.py  list_operations.py  markdown.py  rate_converter.py  schema.py  search.py  search_tool.py  searxng.py
agents/ultra_search/: agent.py  graph.py  human_node.py  image_validation.py  planner.py  prompt.py  researcher.py  response.py  reviewer.py  schema.py  writer.py
agents/web/: graph.py  human_node.py  planner.py  query_agent.py  schema.py  writer_agent.py
agents/web/prompts/: planner_prompts.py  web_prompts.py
api/: __init__.py  chat.py  discover.py  image.py  models.py  upload.py
api/admin/: email_manager.py  email_templates.py  model.py  route.py  schema.py  services.py
api/auth/: cache.py  credit_manager.py  email.py  model.py  route.py  schema.py  schema_in.py  services.py
api/chat/: model.py  route.py  schema.py
api/payments/: model.py  route.py  schema.py  services.py
api/product/: agent.py  deep_search.py  model.py  prompt.py  route.py  schema.py  services.py
api/track/: _celerey.py  agent.py  manager.py  model.py  route.py  schema.py  scrape.py
data/db/: product_cache.db
data/db/cache/000/: cache.db
data/db/cache/001/: cache.db
data/db/cache/002/: cache.db
data/db/cache/003/: cache.db
data/db/cache/004/: cache.db
data/db/cache/005/: cache.db
data/db/cache/006/: cache.db
data/db/cache/007/: cache.db
db/: __init__.py
db/_appwrite/: base.py  chat.py  db_register.py  fields.py  model_base.py  session.py  wrapper.py
db/_appwrite/user_service/: service.py  user.py
db/appwrite/: chat.py
db/cache/: decourator.py  dict.py  manager.py  session.py
db/sqlite/: appwrite.py  manager.py
model/: __init__.py  llms.py
prompts/: __init__.py
prompts/system/: comparison.py  followup.py  insights.py  meta.py  meta_prompt.py  planner.py  policy.py  response.py  reviewer.py  search.py  web.py  writer_prompt.py
qdrant/config/: production.yaml
schema/: __init__.py
schema/dataclass/: database.py  decourator.py  dependencies.py  state.py
schema/dataclasses/: decourator.py  dependencies.py  state.py
schema/validations/: agents_schemas.py  websocket.py
searxng/: settings.yml
test/: meta_agent_test.py  policy.py  test_comparison.py  test_planner.py  test_policy_agent.py  test_reviewer.py  test_search_agent.py  websocket.py  writer_test.py
utils/: __init__.py  _craw4ai.py  background.py  backup_manager.py  celery_tasks.py  db_manager.py  decorator.py  ecommerce_manager.py  ecommerce_schema.py  email_manager.py  emails.py  entity_recognition.py  error_handlers.py  exceptions.py  exceptions_handlers.py  flare_bypasser.py  helper_state.py  id.py  image.py  limiter.py  logging.py  memory.py  middleware.py  price_tracking.py  product_utils.py  proxy_manager.py  queue.py  request_session.py  rerank.py  response.py  scrape.py  search.py  search_cache.py  test_proxies.py  url_shortener.py  websocket.py
utils/ecommerce/: base.py  jumia.py  konga.py  shopify_example.py  types.py  woocommerce_example.py
utils/ecommerce_integrations/: jiji.py  jumia.py  konga.py  shopinverse.py
utils/ecommerce_integrations/llm/: base.py  integrations.py  prompt.py  schema.py
utils/ecommerce_schema/: konga.py
utils/email_templates/: forgot_password.py  new_user.py  payment_acknowledgement.py
