[tool.poetry]
name = "volera-backend"
version = "0.1.0"
description = "Volera Backend API"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "24.1.0"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.11.10"
aiosignal = "1.3.2"
aiosqlite = "0.20.0"
algoliasearch = "4.12.0"
amqp = "5.3.1"
annotated-types = "0.7.0"
anthropic = "0.40.0"
anyio = "4.7.0"
appwrite = "6.1.0"
argon2-cffi = "23.1.0"
async-timeout = "5.0.1"
attrs = "24.3.0"
bcrypt = "4.2.1"
beautifulsoup4 = "4.12.3"
billiard = "4.2.1"
blis = "1.1.0"
cachetools = "5.5.0"
catalogue = "2.0.10"
celery = "5.4.0"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
click = "8.1.7"
cloudpathlib = "0.20.0"
colorama = "0.4.6"
coloredlogs = "15.0.1"
colorlog = "6.9.0"
confection = "0.1.5"
Crawl4AI = "0.4.247"
cryptography = "44.0.0"
cymem = "2.0.10"
dataclasses-json = "0.6.7"
diskcache = "5.6.3"
dnspython = "2.7.0"
ecdsa = "0.19.0"
email_validator = "2.2.0"
eval_type_backport = "0.2.0"
faiss-cpu = "1.9.0.post1"
fake-http-header = "0.3.5"
fastapi = "0.115.6"
fastapi-limiter = "0.1.6"
fastembed = "0.5.1"
filelock = "3.16.1"
filetype = "1.2.0"
FlashRank = "0.2.10"
flatbuffers = "24.12.23"
frozenlist = "1.5.0"
fsspec = "2024.12.0"
gitignore_parser = "0.1.11"
gliner = "0.2.15"
google-ai-generativelanguage = "0.6.10"
google-api-core = "2.24.0"
google-api-python-client = "2.155.0"
google-auth = "2.37.0"
google-auth-httplib2 = "0.2.0"
google-generativeai = "0.8.3"
googleapis-common-protos = "1.66.0"
greenlet = "3.1.1"
griffe = "1.5.1"
groq = "0.13.1"
grpcio = "1.68.1"
grpcio-status = "1.68.1"
h11 = "0.14.0"
httpcore = "1.0.7"
httplib2 = "0.22.0"
httptools = "0.6.4"
httpx = "0.27.2"
httpx-sse = "0.4.0"
huggingface-hub = "0.27.1"
humanfriendly = "10.0"
idna = "3.10"
importlib_metadata = "8.5.0"
iniconfig = "2.0.0"
Jinja2 = "3.1.4"
jiter = "0.8.2"
joblib = "1.4.2"
json_repair = "0.31.0"
jsonpatch = "1.33"
jsonpath-python = "1.0.6"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
kombu = "5.4.2"
kombu-sqlalchemy = "1.1.0"
langchain = "0.3.12"
langchain-community = "0.3.12"
langchain-core = "0.3.25"
langchain-google-genai = "2.0.7"
langchain-text-splitters = "0.3.3"
langcodes = "3.5.0"
langgraph = "0.2.60"
langgraph-checkpoint = "2.0.9"
langgraph-checkpoint-mongodb = "0.1.0"
langgraph-sdk = "0.1.46"
langsmith = "0.2.3"
language_data = "1.3.0"
litellm = "1.57.1"
logfire-api = "2.7.1"
loguru = "0.7.3"
lxml = "5.3.0"
marisa-trie = "1.2.1"
markdown-it-py = "3.0.0"
MarkupSafe = "3.0.2"
marshmallow = "3.23.1"
mdurl = "0.1.2"
mistralai = "1.2.5"
mmh3 = "4.1.0"
mockito = "1.5.3"
motor = "3.6.0"
mpmath = "1.3.0"
msgpack = "1.1.0"
multidict = "6.1.0"
murmurhash = "1.0.11"
mypy-extensions = "1.0.0"
networkx = "3.4.2"
nltk = "3.9.1"
numpy = ">=1.22.4,<2"
onnxruntime = "1.20.1"
openai = "1.57.4"
orjson = "3.10.12"
packaging = "24.2"
passlib = "1.7.4"
pika = "1.3.2"
pillow = "10.4.0"
playwright = "1.49.1"
pluggy = "1.5.0"
preshed = "3.0.9"
prompt_toolkit = "3.0.48"
propcache = "0.2.1"
proto-plus = "1.25.0"
protobuf = "5.29.1"
psutil = "6.1.1"
py_rust_stemmers = "0.1.3"
pyasn1 = "0.6.1"
pyasn1_modules = "0.4.1"
pycparser = "2.22"
pycron = "3.1.2"
pycryptodome = "3.21.0"
pydantic = "2.10.3"
pydantic-ai = "0.0.13"
pydantic-ai-slim = "0.0.13"
pydantic-settings = "2.7.0"
pydantic_core = "2.27.1"
pyee = "12.0.0"
Pygments = "2.18.0"
pymongo = "4.9.2"
pyOpenSSL = "24.3.0"
pyparsing = "3.2.0"
pyreadline3 = "3.5.4"
pyshorteners = "1.0.1"
pytest = "8.3.4"
pytest-asyncio = "0.25.0"
pytest-mockito = "0.0.4"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-jose = "3.3.0"
python-multipart = "0.0.20"
pytz = "2024.2"
PyYAML = "6.0.2"
pyzmq = "26.2.0"
rank-bm25 = "0.2.2"
redis = "5.2.1"
referencing = "0.35.1"
regex = "2024.11.6"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
rich-toolkit = "0.12.0"
rpds-py = "0.22.3"
rsa = "4.9"
safetensors = "0.5.1"
scikit-learn = "1.6.0"
scipy = "1.15.0"
sentencepiece = "0.2.0"
sentry-sdk = "2.20.0"
shellingham = "1.5.4"
six = "1.17.0"
smart-open = "7.1.0"
sniffio = "1.3.1"
snowballstemmer = "2.2.0"
soupsieve = "2.6"
spacy = "3.8.3"
spacy-legacy = "3.0.12"
spacy-loggers = "1.0.5"
SQLAlchemy = "2.0.36"
srsly = "2.5.0"
starlette = "0.41.3"
sympy = "1.13.1"
taskiq = "0.11.10"
taskiq-dependencies = "1.5.6"
tenacity = "9.0.0"
tf-playwright-stealth = "1.1.0"
thinc = "8.3.3"
threadpoolctl = "3.5.0"
tiktoken = "0.8.0"
tokenizers = "0.21.0"
torch = "2.5.1"
tornado = "6.4.2"
tqdm = "4.67.1"
transformers = "4.47.1"
typer = "0.15.1"
typing-inspect = "0.9.0"
typing_extensions = "4.12.2"
tzdata = "2024.2"
uritemplate = "4.1.1"
urllib3 = "2.2.3"
uvicorn = "0.34.0"
vine = "5.1.0"
wasabi = "1.1.3"
watchdog = "4.0.2"
watchfiles = "1.0.3"
wcwidth = "0.2.13"
weasel = "0.4.1"
websockets = "14.1"
wrapt = "1.17.1"
xxhash = "3.5.0"
yarl = "1.18.3"
zipp = "3.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
